--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -1,34 +1,35 @@
 .nav_sidebar {
-  /* border: 2px solid black; */
-  height: 100%;
+    /* border: 2px solid black; */
 }
 
 .ul_sidebar {
-  list-style: none;
-  background-color: rgb(179, 190, 211);
-  margin: 0 0;
-  padding: 0 0;
-  width: 200px;
-  height: 100%;
-  text-align: center;
-  border: 1px solid black;
-  font-size: 20px;
+    list-style: none;
+    margin: 20px 0 0 0;
+    padding: 0 0;
+    width: 170px;
+    text-align: center;
+    font-size: 20px;
+    font-family: "Gugi", "Franklin Gothic Medium ", "Arial Narrow", Arial,
+        sans-serif;
 }
 
 .aside_sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+    background-color: rgb(179, 190, 211);
+    border: 1px solid black;
+    top: 0;
+    left: 0;
+    height: 100%;
 }
 
 .Open {
-  transition: transform 0.3s ease-out;
-  transform: translateX(0);
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.7);
+    transition: transform 0.3s ease-out;
+    transform: translateX(0);
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.7);
 }
 
 .Close {
-  transform: translateX(-100%);
-  transition: transform 0.2s ease-out;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-out;
 }
