--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
-    border-bottom: 1px solid rgb(134, 134, 134);
-    background-color: rgb(135, 167, 194);
+    border-bottom: 1px solid rgb(0, 0, 0);
+    background-color: rgba(211, 81, 6, 1);
+    box-shadow:rgba(0, 0, 0, 0.3) 0px 2px 4px -1px, rgba(0, 0, 0, 0.24) 0px 4px 5px 0px, rgba(0, 0, 0, 0.22) 0px 1px 10px 0px;
 }
 
 .Burger_main_div {
@@ -8,22 +9,22 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: 10px;
-    width: 30px;
+    width: 50px;
     box-sizing: border-box;
     cursor: pointer;
+    background-color: black;
 }
 .Burger_div {
-    width: 90%;
-    height: 2px;
+    width: 65%;
+    height: 3px;
     border: 1px solid black;
-    background-color: rgb(59, 67, 73);
+    background-color: rgb(216, 101, 34);
 }
 
 .nav_bar {
     display: flex;
     width: 100%;
-    height: 33px;
+    height: 50px;
 }
 
 .nav_bar_ul {
@@ -36,11 +37,15 @@
 }
 
 .nav_bar_ul_li {
-    margin: 5px 10px 5px 15px;
-    padding-bottom: 2px;
-    font-size: 18px;
-    font-family: "Gugi", "Franklin Gothic Medium ", "Arial Narrow", Arial,
-        sans-serif;
+    padding: 14px 10px 5px 15px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
+    color: rgb(218, 101, 33);
+}
+
+.nav_bar_ul_li:hover {
+background-color: rgb(54, 54, 54);
 }
 
 @media only screen and (min-width: 450px) {
@@ -54,5 +59,8 @@
         padding: 0;
         margin: 0;
         box-sizing: content-box;
+    }
+    .header {
+        height: 30%;
     }
 }
