--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -1,17 +1,15 @@
 /* -------------------- Component Css -------------------- */
 .Login_Area {
-    font-family: "Gugi", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-    width: 300px;
-    height: 200px;
-    margin-top: 15%;
-    border: 1px solid black;
-    border-radius: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 230px;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     justify-items: center;
-    background-color: rgb(135, 167, 194);
+    background-color: rgba(216, 101, 34, 0.8);
+    box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px -1px, rgba(0, 0, 0, 0.34) 0px 4px 5px 0px, rgba(0, 0, 0, 0.32) 0px 1px 10px 0px;
 }
 
 input {
@@ -22,19 +20,18 @@ input {
     box-sizing: border-box;
 }
 input:focus {
-    border: 2px solid rgb(56, 56, 56);
+    border: 2px solid rgb(0, 0, 0);
 }
 
 label {
     display: block;
-    margin-right: 5px;
     text-decoration: underline;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     font-size: 22px;
 }
 .Login_button {
     border: 1px solid black;
-    background-color: rgb(40, 77, 145);
+    background-color: rgb(0, 0, 0);
     border-radius: 3px;
     font-weight: bold;
     padding: 0;
@@ -43,30 +40,28 @@ label {
     font-family: "Gugi", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
     font-size: 16px;
-    color: azure;
+    color: rgb(238, 93, 10);
 }
 
 .Login_button:hover {
-    animation: animate-button-in ease-in 0.1s;
-    background-color: rgb(70, 194, 90);
-    width: 120px;
+    /* animation: animate-button-in ease-in 0.1s; */
+    background-color: rgb(42, 42, 42);
 }
 
 /* -------------------- Media-Queris -------------------- */
 @media only screen and (min-width: 450px) {
     .Login_Area {
-        font-family: "Gugi", "Gill Sans", "Gill Sans MT", Calibri,
-            "Trebuchet MS", sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        width: 320px;
+        width: 450px;
         height: 250px;
         margin-top: 10%;
-        border: 1px solid black;
-        border-radius: 3%;
         display: flex;
+        border: 1px solid black;
         flex-direction: column;
         justify-content: space-evenly;
         justify-items: center;
+        border-radius: 10px;
     }
     section {
         display: flex;
@@ -79,20 +74,19 @@ label {
     }
     label {
         margin-right: 3px;
+        margin-bottom: 1px;
         width: 120px;
-        font-size: 20px;
+        font-size: 22px;
     }
 }
 
 /* -------------------- Keyframes Animations -------------------- */
 @keyframes animate-button-in {
     0% {
-        background-color: rgb(40, 77, 145);
-        width: 100px;
+        background-color: rgb(0, 0, 0);
     }
 
     100% {
-        background-color: rgb(70, 194, 90);
-        width: 120px;
+        background-color: rgb(51, 30, 12);
     }
 }
