--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,7 +1,17 @@
+/* .root-variables{
+} */
+
 .header {
     border-bottom: 1px solid rgb(0, 0, 0);
     background-color: rgba(211, 81, 6, 1);
-    box-shadow:rgba(0, 0, 0, 0.3) 0px 2px 4px -1px, rgba(0, 0, 0, 0.24) 0px 4px 5px 0px, rgba(0, 0, 0, 0.22) 0px 1px 10px 0px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px -1px,
+        rgba(0, 0, 0, 0.24) 0px 4px 5px 0px,
+        rgba(0, 0, 0, 0.22) 0px 1px 10px 0px;
+}
+.Burger_container {
+    display: flex;
+    justify-content: flex-start;
+    width: 50%;
 }
 
 .Burger_main_div {
@@ -17,17 +27,16 @@
 .Burger_div {
     width: 65%;
     height: 3px;
-    border: 1px solid black;
     background-color: rgb(216, 101, 34);
 }
 
 .nav_bar {
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 60px;
 }
 
-.nav_bar_ul {
+.div_ul_container {
     display: none;
     /* width: 100%; */
     /* list-style: none; */
@@ -37,7 +46,7 @@
 }
 
 .nav_bar_ul_li {
-    padding: 14px 10px 5px 15px;
+    padding: 18px 15px 5px 15px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
@@ -45,22 +54,45 @@
 }
 
 .nav_bar_ul_li:hover {
-background-color: rgb(54, 54, 54);
+    background-color: rgb(54, 54, 54);
+}
+
+.logo_img {
+    width: 200px;
+    height: 55px;
+    margin-top: 2px;
+    margin-right: 30px;
+}
+.div_img_container {
+    display: flex;
+    justify-content: flex-end;    
 }
 
 @media only screen and (min-width: 450px) {
-    .Burger_main_div {
+    .Burger_container {
         display: none;
     }
     .nav_bar_ul {
-        width: 100%;
+        width: auto;
         list-style: none;
         display: flex;
         padding: 0;
         margin: 0;
         box-sizing: content-box;
     }
-    .header {
-        height: 30%;
+    .div_ul_container {
+        display: flex;
+        justify-content: flex-start;
+        width: 50%;
+        height: 100%;
+    }
+
+    .div_img_container {
+        display: flex;
+        justify-content: flex-end;
+        width: 50%;
+    }
+    .logo_img{
+       margin-right: 30px; 
     }
 }
