--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -9,7 +9,9 @@
     justify-content: space-around;
     justify-items: center;
     background-color: rgba(216, 101, 34, 0.8);
-    box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px -1px, rgba(0, 0, 0, 0.34) 0px 4px 5px 0px, rgba(0, 0, 0, 0.32) 0px 1px 10px 0px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px -1px,
+        rgba(0, 0, 0, 0.34) 0px 4px 5px 0px,
+        rgba(0, 0, 0, 0.32) 0px 1px 10px 0px;
 }
 
 input {
@@ -80,6 +82,13 @@ label {
     }
 }
 
+@media (orientation: landscape) {
+    .Login_Area {
+        height: 220px;
+        width: 380px;
+        margin-top: 3%;
+    }
+}
 /* -------------------- Keyframes Animations -------------------- */
 @keyframes animate-button-in {
     0% {
