--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -3,7 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 230px;
-    margin-top: 10%;
+    margin-top: 15%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -55,7 +55,7 @@ label {
     .Login_Area {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        width: 450px;
+        width: 430px;
         height: 250px;
         margin-top: 10%;
         display: flex;
@@ -82,7 +82,7 @@ label {
     }
 }
 
-@media (orientation: landscape) {
+@media only screen and (max-height: 450px) {
     .Login_Area {
         height: 220px;
         width: 380px;
