Chnaged BG Img and fonts, favicon added.

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -48,7 +48,7 @@
 .nav_bar_ul_li {
     padding: 18px 15px 5px 15px;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lacquer', sans-serif;
     background-color: black;
     color: rgb(218, 101, 33);
 }
