--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -1,6 +1,6 @@
 /* -------------------- Component Css -------------------- */
 .Login_Area {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lacquer', sans-serif;
     width: 100%;
     height: 230px;
     margin-top: 15%;
@@ -39,8 +39,7 @@ label {
     padding: 0;
     width: 100px;
     height: 40px;
-    font-family: "Gugi", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
+    font-family: 'Lacquer', sans-serif;
     font-size: 16px;
     color: rgb(238, 93, 10);
 }
@@ -53,7 +52,7 @@ label {
 /* -------------------- Media-Queris -------------------- */
 @media only screen and (min-width: 450px) {
     .Login_Area {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Lacquer', sans-serif;
         font-size: 18px;
         width: 430px;
         height: 250px;
