--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -9,9 +9,9 @@
     width: 170px;
     text-align: center;
     font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Lacquer", sans-serif;
 }
-.ul_li{
+.ul_li {
     margin-bottom: 10px;
 }
 
