--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -10,9 +10,25 @@
     text-align: center;
     font-size: 28px;
     font-family: "Lacquer", sans-serif;
+    z-index: 3;
 }
+
 .ul_li {
-    margin-bottom: 10px;
+    height: 50px;
+}
+
+.ul_link {
+    padding-top: 7px;
+    display: inline-block;
+    color: black;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+}
+
+.ul_link:hover {    
+    background-color: black;
+    color: rgb(216, 101, 34);
 }
 
 .aside_sidebar {
@@ -23,6 +39,7 @@
     top: 0;
     left: 0;
     height: 100%;
+    z-index: 2;
 }
 
 .Open {
