--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -1,6 +1,8 @@
 /* -------------------- Component Css -------------------- */
+.main {
+}
 .Login_Area {
-    font-family: 'Lacquer', sans-serif;
+    font-family: "Lacquer", sans-serif;
     width: 100%;
     height: 230px;
     margin-top: 15%;
@@ -13,9 +15,7 @@
         rgba(0, 0, 0, 0.34) 0px 4px 5px 0px,
         rgba(0, 0, 0, 0.32) 0px 1px 10px 0px;
 }
-
-input {
-    width: 170px;
+input {    
     height: 25px;
     padding-left: 5px;
     border: 1px solid rgb(56, 56, 56);
@@ -25,12 +25,18 @@ input:focus {
     border: 2px solid rgb(0, 0, 0);
 }
 
-label {
-    display: block;
-    text-decoration: underline;
-    margin-bottom: 3px;
-    font-size: 22px;
+label {    
+    text-decoration: underline;    
+    margin-bottom: 8px;
+    font-size: 30px;
 }
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .Login_button {
     border: 1px solid black;
     background-color: rgb(0, 0, 0);
@@ -39,7 +45,7 @@ label {
     padding: 0;
     width: 100px;
     height: 40px;
-    font-family: 'Lacquer', sans-serif;
+    font-family: "Lacquer", sans-serif;
     font-size: 16px;
     color: rgb(238, 93, 10);
 }
@@ -51,8 +57,15 @@ label {
 
 /* -------------------- Media-Queris -------------------- */
 @media only screen and (min-width: 450px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    }
+
     .Login_Area {
-        font-family: 'Lacquer', sans-serif;
+        font-family: "Lacquer", sans-serif;
         font-size: 18px;
         width: 430px;
         height: 250px;
@@ -67,17 +80,16 @@ label {
     section {
         display: flex;
         flex-direction: row;
+        align-items: center;
         justify-content: center;
     }
-
     input {
         display: inline-block;
     }
     label {
-        margin-right: 3px;
+        flex-direction: row;
+        margin-right: 5px;
         margin-bottom: 1px;
-        width: 120px;
-        font-size: 22px;
     }
 }
 
