--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+:root {
+    --font-Lacquer: "Lacquer", sans-serif;
+}
 html {
     height: 100%;
+    overflow-x: hidden;
 }
 body {
+    overflow-x: hidden;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
