--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -4,15 +4,12 @@
 /* -------------------- Component Css -------------------- */
 .header {
     background-color: rgb(216, 101, 34);
-    animation: Header-Fade-In ease-in 0.8s;
-    will-change: opacity;
 }
 .Burger_container {
     display: flex;
     justify-content: flex-start;
     width: 50%;
 }
-
 .Burger_main_div {
     display: flex;
     flex-direction: column;
@@ -28,13 +25,11 @@
     height: 3px;
     background-color: rgb(216, 101, 34);
 }
-
 .nav_bar {
     display: flex;
     width: 100%;
     height: 60px;
 }
-
 .div_ul_container {
     display: none;
     /* width: 100%; */
@@ -43,26 +38,26 @@
     margin: 0;
     box-sizing: content-box; */
 }
-
 .nav_bar_ul_link {
-    padding: 12px 15px 5px 15px;
+    display: flex;
+    align-items: center;
+    padding: 0px 10px 0px 10px;
     font-size: 28px;
     font-family: "Lacquer", sans-serif;
     color: black;
     text-decoration: none;
+    height: 100%;
 }
-
 .nav_bar_ul_link:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(216, 101, 34);
 }
-
 .logo_img {
     width: 200px;
     height: 55px;
     margin-top: 2px;
     margin-right: 30px;
-    animation: Logo-Roll-In ease-in 0.8s;
+    animation: Logo-Roll-In ease-in 0.6s;
 }
 .div_img_container {
     display: flex;
@@ -72,32 +67,54 @@
 /* -------------------- Media-Queris -------------------- */
 @media only screen and (min-width: 450px) {
     .header {
-        box-shadow: rgba(255, 94, 0, 0.3) 0px 3px 4px -1px,
-            rgba(255, 94, 0, 0.24) 0px 4px 5px 0px,
-            rgba(255, 94, 0, 0.22) 0px 1px 10px 0px;
+        box-shadow: rgba(216, 101, 34, 0.4) 0px 2px 4px -1px,
+            rgba(216, 101, 34, 0.34) 3px 4px 5px 0px;
     }
     .Burger_container {
         display: none;
     }
     .nav_bar_ul {
         width: auto;
+        height: 100%;
         list-style: none;
         display: flex;
+        align-items: center;
         padding: 0;
         margin: 0;
         box-sizing: content-box;
     }
     .div_ul_container {
         display: flex;
-        justify-content: flex-start;
-        width: 50%;
-        height: 100%;
+        width: 30%;
     }
 
     .div_img_container {
         display: flex;
         justify-content: flex-end;
-        width: 50%;
+        align-items: center;
+        width: 70%;
+    }
+    .span_signin {
+        text-decoration: underline;
+        color: black;
+        font-size: 25px;
+        vertical-align: bottom;
+    }
+    .pet_icon {
+        margin-left: 3px;
+        font-size: 30px;
+        vertical-align: bottom;
+    }
+}
+
+@media only screen and (min-width: 590px) {
+    .nav_bar {
+        display: flex;
+        width: 100%;
+        height: 80px;
+    }
+    .nav_bar_ul_link {
+        padding: 0px 30px 0px 30px;
     }
 }
 
