--- a/src/Components/LoginPage/LoginPage.module.css
+++ b/src/Components/LoginPage/LoginPage.module.css
@@ -3,6 +3,9 @@
 }
 .Login_Area {
     font-family: "Lacquer", sans-serif;
+    border-top: 1px solid rgb(238, 93, 10);
+    border-bottom: 1px solid rgb(238, 93, 10);
+    color: rgb(0, 0, 0, 0.9);
     width: 100%;
     height: 230px;
     margin-top: 15%;
@@ -10,36 +13,31 @@
     flex-direction: column;
     justify-content: space-around;
     justify-items: center;
-    background-color: rgba(216, 101, 34, 0.8);
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px -1px,
-        rgba(0, 0, 0, 0.34) 0px 4px 5px 0px,
-        rgba(0, 0, 0, 0.32) 0px 1px 10px 0px;
+    background-color: rgba(238, 93, 10, 0.9);
 }
-input {    
+input {
     height: 25px;
     padding-left: 5px;
     border: 1px solid rgb(56, 56, 56);
     box-sizing: border-box;
 }
 input:focus {
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(238, 93, 10);
 }
-
-label {    
-    text-decoration: underline;    
+label {
     margin-bottom: 8px;
-    font-size: 30px;
+    font-size: 28px;
+    display: inline-block;
+    vertical-align: middle;
 }
-
 section {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .Login_button {
-    border: 1px solid black;
-    background-color: rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(238, 93, 10);
     border-radius: 3px;
     font-weight: bold;
     padding: 0;
@@ -47,12 +45,13 @@ section {
     height: 40px;
     font-family: "Lacquer", sans-serif;
     font-size: 16px;
-    color: rgb(238, 93, 10);
+    color: rgb(0, 0, 0);
 }
-
 .Login_button:hover {
     /* animation: animate-button-in ease-in 0.1s; */
-    background-color: rgb(42, 42, 42);
+    background-color: rgb(238, 93, 10);
+    border: 1px solid black;
+    color: black;
 }
 
 /* -------------------- Media-Queris -------------------- */
@@ -63,7 +62,6 @@ section {
         justify-items: center;
         align-items: center;
     }
-
     .Login_Area {
         font-family: "Lacquer", sans-serif;
         font-size: 18px;
@@ -71,13 +69,17 @@ section {
         height: 250px;
         margin-top: 10%;
         display: flex;
-        border: 1px solid black;
+        border: 1px solid rgb(0, 0, 0);
         flex-direction: column;
         justify-content: space-evenly;
         justify-items: center;
         border-radius: 10px;
     }
-    section {
+    .Login_button {
+        width: 120px;
+        height: 50px;
+    }
+    .section {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -89,7 +91,8 @@ section {
     label {
         flex-direction: row;
         margin-right: 5px;
-        margin-bottom: 1px;
+        margin-bottom: 0;
+        padding-bottom: 1px;
     }
 }
 
