--- a/src/Components/HomePage/HomePage.module.css
+++ b/src/Components/HomePage/HomePage.module.css
@@ -144,6 +144,12 @@
     }
     .li_num_info {
         flex: 1;
-        font-size: 1.35em;
+        font-size: 1.3em;
+    }
+}
+@media only screen and (min-width: 1260px) {
+    .li_num_info {
+        flex: 1;
+        font-size: 1.5em;
     }
 }
